--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: 'Rubik Mono One', sans-serif;
 }
+html{
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
 
 /* ? centralizzazione */
 section{
@@ -18,13 +22,12 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px dashed black;
     height: 100%;
     width: 1000px;
 }
 img{
     position: relative;
-    bottom: 35px;
+    bottom: 45px;
     right: 0;
 }
 .title{
@@ -43,7 +46,7 @@ h1{
     text-align: center;
 }
 section.red{
-    background-color: aquamarine;
+    background-color: red;
 }
 section.green{
     background-color: green;
@@ -54,6 +57,31 @@ section.yellow{
 .yellow h1{
     color: green;
 }
-
+/* menu di navigazione */
+.nav-menu{
+    position: fixed;
+    top: 30px;
+    right: 20px;
+}
+.nav-menu ul{
+    list-style-type: none;
+    display: flex;
+    gap: 2rem; 
+}
+.nav-menu a{
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    line-height: 50px;
+    font-size: 1rem;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;  
+}
+.nav-menu a:hover{
+    scale: 1.2;
+}
 
 
